force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Goal__c/agf__ADM_Goal__c.object-meta.xml
<CustomObject>
    <label>Program Goal</label>
    <nameField>
        <label>Goal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Goals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>