force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Goal__c/fields/agf__Current_Measurements__c.field-meta.xml
<CustomField>
    <fullName>agf__Current_Measurements__c</fullName>
    <inlineHelpText>What is the current status of this goal of achived vs. what we want to achieve?</inlineHelpText>
    <label>Current Measurements</label>
    <type>TextArea</type>
</CustomField>