force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Goal__c/fields/agf__Description_255__c.field-meta.xml
<CustomField>
    <fullName>agf__Description_255__c</fullName>
    <inlineHelpText>Short description of this goal</inlineHelpText>
    <label>Description (255)</label>
    <type>TextArea</type>
</CustomField>