force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Goal__c/fields/agf__How_will_it_be_measured__c.field-meta.xml
<CustomField>
    <fullName>agf__How_will_it_be_measured__c</fullName>
    <label>How will it be measured?</label>
    <type>TextArea</type>
</CustomField>