force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Goal__c/fields/agf__Status__c.field-meta.xml
<CustomField>
    <fullName>agf__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Not Met</fullName>
            </value>
            <value>
                <fullName>Partially Met</fullName>
            </value>
            <value>
                <fullName>Met</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>