force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Goal__c/fields/agf__Theme__c.field-meta.xml
<CustomField>
    <fullName>agf__Theme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Theme</label>
    <referenceTo>agf__ADM_Theme__c</referenceTo>
    <relationshipLabel>Program Goals</relationshipLabel>
    <relationshipName>Program_Goals</relationshipName>
    <type>Lookup</type>
</CustomField>